@@ -1,3 +1,5 @@
+HEAD
+	+ Make EBox::Software::listUpgradablePkgs recover form file corruption
 4.0
 	+ New welcome page on first install
 	+ Set version to 4.0
